<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taminations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_definition">Definition</string>
    <string name="menu_about">About</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="button_level_mainstream">Mainstream</string>
    <string name="button_level_plus">Plus</string>
    <string name="button_level_advanced">Advanced</string>
    <string name="button_level_c1">C-1</string>
    <string name="button_level_c2">C-2</string>
    <string name="button_level_c3a">C-3A</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_anim_list">AnimListActivity</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_animation_slow">Slow</string>
    <string name="button_animation_normal">Normal</string>
    <string name="button_animation_fast">Fast</string>
    <string name="button_animation_loop">Loop</string>
    <string name="button_animation_grid">Grid</string>
    <string name="button_animation_paths">Paths</string>
    <string name="button_animation_rewind">&lt;&lt;</string>
    <string name="button_animation_backward">|&lt;</string>
    <string name="button_animation_prev">&lt;</string>
    <string name="button_animation_play">Play</string>
    <string name="button_animation_stop">Stop</string>
    <string name="button_animation_next">&gt;</string>
    <string name="button_animation_forward">&gt;|</string>
    <string name="button_animation_end">&gt;&gt;</string>
    <string name="button_animation_numbers">#</string>
    <string name="title_activity_definition">DefinitionActivity</string>
    <string name="title_activity_about">About</string>
    <string name="label_difficulty_common">Common</string>
    <string name="label_difficulty_harder">Harder</string>
    <string name="label_difficulty_expert">Expert</string>
</resources>
