<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnimationActivity" >

    <com.bradchristie.taminationsapp.AnimationView
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000" />

    <com.bradchristie.taminationsapp.SliderTicView
        android:id="@+id/slidertics"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_rewind"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonRewindClicked"
            android:text="@string/button_animation_rewind" />

        <Button
            android:id="@+id/button_prev"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonBackupClicked"
            android:text="@string/button_animation_prev" />

        <Button
            android:id="@+id/button_play"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonPlayClicked"
            android:text="@string/button_animation_play" />

        <Button
            android:id="@+id/button_next"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonForwardClicked"
            android:text="@string/button_animation_next" />

        <Button
            android:id="@+id/button_end"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonEndClicked"
            android:layout_weight="1"
            android:text="@string/button_animation_end" />


      </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_definition"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onButtonDefinitionClicked"
            android:text="@string/menu_definition" />

        <Button
            android:id="@+id/button_settings"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onButtonSettingsClicked"
            android:text="@string/menu_settings" />

    </LinearLayout>

</LinearLayout>
