<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnimationActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.bradchristie.taminationsapp.AnimationView
            android:id="@+id/animation"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/text_tamsays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textColor="#ff000000"
            android:textStyle="italic"
            android:background="#c0ffffff"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000" />

    <com.bradchristie.taminationsapp.SliderTicView
        android:id="@+id/slidertics"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/button_rewind"
            android:src="@android:drawable/ic_media_rew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonRewindClicked"
            android:contentDescription="@string/button_animation_rewind" />

        <ImageButton
            android:id="@+id/button_prev"
            android:src="@android:drawable/ic_media_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonBackupClicked"
            android:contentDescription="@string/button_animation_prev" />

        <ImageButton
            android:id="@+id/button_play"
            android:src="@drawable/button_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonPlayClicked"
            android:contentDescription="@string/button_animation_play"/>

        <ImageButton
            android:id="@+id/button_next"
            android:src="@android:drawable/ic_media_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonForwardClicked"
            android:contentDescription="@string/button_animation_next" />

        <ImageButton
            android:id="@+id/button_end"
            android:src="@android:drawable/ic_media_ff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonEndClicked"
            android:layout_weight="1"
            android:contentDescription="@string/button_animation_end" />

      </LinearLayout>

</LinearLayout>
