<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnimListActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ActivityTitle"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:onClick="onLogoClicked"
            android:contentDescription="logo" />

        <TextView
            android:id="@+id/title"
            style="@style/ActivityTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/button_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLevelClicked"
            android:text="Plus" />

    </LinearLayout>

    <fragment
        android:id="@+id/fragment_animlist"
        android:name="com.bradchristie.taminationsapp.AnimListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_animlist" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_definition"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onButtonDefinitionClicked"
            android:text="@string/menu_definition" />

        <Button
            android:id="@+id/button_settings"
            style="@style/BWButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onButtonSettingsClicked"
            android:text="@string/menu_settings" />

    </LinearLayout>

</LinearLayout>
